Ajustadas paginas conforme solicitado na tarefa

--- a/README.me
+++ b/README.me
@@ -1,3 +1,5 @@
 #Avaliação de Fundamentos ao desenvolvimento WEB
 
 ## criar o web site da empresa House Paint.
+
+É possível fazer o download do projeto na página "Sobre Nós".
